--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ scipy
 Pillow
 matplotlib
 scikit-image>=0.14.2
-opencv-python-headless
+# opencv-python-headless
 # imageio versions past 2.6.1 do not support <3.5 anymore
 imageio<=2.6.1; python_version<'3.5'
 imageio; python_version>='3.5'
